--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -17,7 +17,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">贝壳社区</span>
             </button>
-            <a class="navbar-brand" href="#">贝壳社区</a>
+            <a class="navbar-brand" href="/">贝壳社区</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
