--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -6,7 +6,7 @@
     <script src="/dist/js/jquery-3.4.1.min.js"></script>
     <script src="/dist/js/bootstrap.min.js"></script>
     <link href="/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/dist/css/commmunity.css" rel="stylesheet">
+    <link href="/dist/css/community.css" rel="stylesheet">
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
