--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -5,6 +5,7 @@
     <title th:text="${question.title}"></title>
     <script src="/dist/js/jquery-3.4.1.min.js"></script>
     <script src="/dist/js/bootstrap.min.js"></script>
+    <script src="/dist/js/community.js"></script>
     <link href="/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/dist/css/community.css" rel="stylesheet">
 </head>
@@ -13,20 +14,41 @@
 <div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12">
-            <h4><span th:text="${question.title}"></span></h4>
-            <span class="text-desc">
+            <div class="col-lg-9 col-md-12 col-sm-12">
+                <h4><span th:text="${question.title}"></span></h4>
+                <span class="text-desc">
                 作者：<span th:text="${question.user.name}"></span> |
                 发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> |
                 阅读数： <span th:text="${question.viewCount}"></span>
             </span>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
                    th:if="${session.user != null && session.user.id == question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    编辑
                 </a>
+            </div>
+
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h5 class="media-heading">
+                            <span th:text="${question.user.name}"></span>
+                        </h5>
+                    </div>
+                </div>
+                <input type="hidden" id="question_id" th:value="${question.id}">
+                <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
             </div>
         </div>
 
