--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -15,7 +15,7 @@
         <p><a class="btn btn-primary btn-lg" href="/" role="button">回到主页</a></p>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-<!--        <img class="img-thumbnail" style="width: 35%;" src="/images/official.jpg">-->
+<!--        <img class="images-thumbnail" style="width: 35%;" src="/images/official.jpg">-->
     </div>
 </div>
 
