--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -43,8 +43,7 @@
                 <!--标签-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <span class="label label-info question-tag" th:each="tag : ${question.tag.split(',')}">
-                        <span class="glyphicon glyphicon-tag"></span>
+                    <span class="question-tag" th:each="tag : ${question.tag.split(',')}">
                         <a th:href="@{/(page=1,tag=${tag})}"
                            th:text="${tag}" class="community-tag"></a>
                     </span>
@@ -57,6 +56,12 @@
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         编辑
                     </a>
+                    <span th:data-id="${question.id}"
+                       onclick="likeQuestion(this)" class="community-menu" id="likeQuestion">
+                        <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                        点赞
+                        <span th:text="${question.likeCount}" class="likeCount"></span>
+                    </span>
                 </div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             </div>
@@ -81,9 +86,14 @@
                             </h5>
                             <div th:text="${comment.content}"></div>
                             <div class="menu">
-                                <span class="glyphicon glyphicon-thumbs-up icon"></span>
                                 <span th:data-id="${comment.id}"
-                                      onclick="collapseComments(this)" class="  comment-icon">
+                                      onclick="likeComment(this)" class="comment-icon" id="likeComment">
+                                    <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                                    <span th:text="${comment.likeCount}" class="likeCount"></span>
+                                </span>
+
+                                <span th:data-id="${comment.id}"
+                                      onclick="collapseComments(this)" class="comment-icon">
                                     <span class="glyphicon glyphicon-comment"></span>
                                     <span th:text="${comment.commentCount}"></span>
                                 </span>
@@ -153,7 +163,7 @@
             <!--微信号-->
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>扫码加微信</h4>
+                <h4>官方微信</h4>
                 <img class="question-wechat" src="/images/wechat.jpg">
             </div>
             <!--相关问题-->
